@@ -453,11 +453,10 @@ let on_generate ctx t =
 			c.cl_statics <- PMap.add f.cf_name f c.cl_statics;
 		end;
 		if not ctx.in_macro then List.iter (fun f ->
-			match f.cf_kind with
-			| Method MethMacro ->
+			if f.cf_kind == Method MethMacro || has_meta ":extern" f.cf_meta then begin
 				c.cl_statics <- PMap.remove f.cf_name c.cl_statics;
 				c.cl_ordered_statics <- List.filter (fun f2 -> f != f2) c.cl_ordered_statics;
-			| _ -> ()
+			end
 		) c.cl_ordered_statics;
 		(match build_metadata ctx.com t with
 		| None -> ()
